# serial-com

./: Cargo.toml  build.rs  config.ini
src/: configs.rs  main.rs  serials.rs
src/components/: mainwidget.slint
src/configs/: read_ini.rs
src/serials/: serial_sever.rs  synchronized.rs
