[package]
name = "serial_com"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport ="4.3.0"
rust-ini ="0.20.0"
slint ="1.3.2"

#build-dependencies是在编译时需要的依赖，但是在运行时不需要的依赖
[build-dependencies]
slint-build ="1.3.2"

#release下的配置
[profile.release]